test/functions/resolution/errors/testBadCallCandidates.1.good
testBadCallCandidates.chpl:71: In function 'main':
testBadCallCandidates.chpl:76: error: unresolved call 'owned C.foo(42)'
testBadCallCandidates.chpl:5: note: this candidate did not match: C.foo(x: string)
testBadCallCandidates.chpl:76: note: because actual argument #1 with type 'int(64)'
testBadCallCandidates.chpl:5: note: is passed to formal 'x: string'
testBadCallCandidates.chpl:76: note: other candidates are:
testBadCallCandidates.chpl:33: note:   D.foo(x: C)
testBadCallCandidates.chpl:59: note:   foo(x: C)
testBadCallCandidates.chpl:62: note:   foo(x: D)
